2006-10-20  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-find-toolbar.c: Do not grab focus but just
	hide the IM context when the toolbar is being closed. Patch by Tomas
	Ostman, fixes for good NB#34193. 

2006-10-20  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-date-editor.c: Changing the error infobanner
	displayed to ckct_ib_illegal_character (when user presses non-numeric
	character in the date editor).

2006-10-19  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com>

	* hildon-widgets/hildon-date-editor.c:
	(hildon_date_editor_keypress): Added check for not allowed keys.
	(hildon_date_editor_date_error): Added banner message for not
	allowed keys. Fixes NB#41049.

	* hildon-widgets/hildon-date-editor.h:
	Added INVALID_CHAR to HildonDateEditorErrorType enumeration.

2006-10-19  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-banner.c:
	(force_to_wrap_truncated): Set label size request to its natural 
	size (it stands fixed after it's wrapped). Fixes NB#38598.

2006-10-18  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[0.14.6-1 release]

	* configure.ac:
	* debian/changelog: Updating.

2006-10-18  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets-plugins/hildon-color-chooser-hsv.c: Fixing the
	clipping in the color selector. Fixes NB#43565.

2006-10-18  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-color-button.c: One more extra to actually fix
	NB#39798.

2006-10-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-get-password-dialog.c: Making the password
	text entry 20 characters long. Fixes NB#39586. A workaround.

2006-10-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-widgets/hildon-name-password-dialog.c: Fixing the
	auto-capitalization issues in the name password dialog. Two things